update secu & role